no need to match height because there is only one of each

--- a/index.html
+++ b/index.html
@@ -188,7 +188,8 @@
         <p> Copyright &#x000A9;&nbsp;2022 Haversack Productions.</p>
       </div>
     </footer>
-  </div><svg aria-hidden="true" style="width: 0; height: 0; display:block;">
+  </div>
+  <svg aria-hidden="true" style="width: 0; height: 0; display:block;">
     <filter id="breakthrough-overlay">
       <fecolormatrix type="matrix" values="1.088235 0 0 0 0
  0 1.025490 0 0 0
@@ -196,11 +197,5 @@
  0 0 0 .9 0 "></fecolormatrix>
     </filter>
   </svg>
-
-  <!-- replace with flexbox -->
-  <script type="text/javascript">
-    jQuery(document).ready(function() { jQuery('.half-width-entries .content .entry, .flexible-widgets .entry, .pricing-table > div').matchHeight(); });
-  </script>
-
 </body>
 </html>
