--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Alegreya+Sans:wght@400;700&family=PT+Serif:wght@700&display=swap" rel="stylesheet">
   <link type="text/css" media="all"
-    href="css/archived_styles.css"
+    href="css/styles.dist.css"
     rel="stylesheet" />
   <title>Haversack Productions</title>
   <link rel="canonical" href="http://haversackproductions.com/" />
