--- a/index.html
+++ b/index.html
@@ -149,7 +149,9 @@
               <h3 class="widgettitle widget-title">Contact Info</h3>
               <div class="textwidget">
                 <h4>Haversack Productions</h4>
+                <p><a href="https://instagram.com/mercadodistricttucson" title="follow us on instagram">@mercadodistricttucson</a></p>
                 <p>27 W. Franklin St.<br /> Tucson, AZ 85701<br /> t: +1 (520) 461-1107</p>
+                <p>For all other mercado District Information: <a href="https://mercadodistrict.com" title="Mercado District">mercadodistrict.com</a></p>
               </div>
             </div>
           </section>
@@ -189,13 +191,5 @@
       </div>
     </footer>
   </div>
-  <svg aria-hidden="true" style="width: 0; height: 0; display:block;">
-    <filter id="breakthrough-overlay">
-      <fecolormatrix type="matrix" values="1.088235 0 0 0 0
- 0 1.025490 0 0 0
- 0 0 0.758824 0 0
- 0 0 0 .9 0 "></fecolormatrix>
-    </filter>
-  </svg>
 </body>
 </html>
