--- a/index.html
+++ b/index.html
@@ -149,9 +149,9 @@
               <h3 class="widgettitle widget-title">Contact Info</h3>
               <div class="textwidget">
                 <h4>Haversack Productions</h4>
-                <p><a href="https://instagram.com/mercadodistricttucson" title="follow us on instagram">@mercadodistricttucson</a></p>
+                <p><a href="https://instagram.com/mercadodistricttucson" target="_blank" title="follow us on instagram">@mercadodistricttucson</a></p>
                 <p>27 W. Franklin St.<br /> Tucson, AZ 85701<br /> t: +1 (520) 461-1107</p>
-                <p>For all other mercado District Information: <a href="https://mercadodistrict.com" title="Mercado District">mercadodistrict.com</a></p>
+                <p>For all other mercado District Information: <a href="https://mercadodistrict.com" target="_blank" title="Mercado District">mercadodistrict.com</a></p>
               </div>
             </div>
           </section>
@@ -164,7 +164,7 @@
           </section>
           <section id="media_image-3" class="widget widget_media_image">
             <div class="widget-wrap">
-              <a href="https://mercadodistrict.com/">
+              <a href="https://mercadodistrict.com/" target="_blank">
                 <img
                   src="static/Mercado-Logo-Footer.svg"
                   class="image wp-image-45  attachment-full size-full" alt=""
@@ -174,12 +174,10 @@
           </section>
           <section id="media_image-2" class="widget widget_media_image">
             <div class="widget-wrap">
-              <a href="http://gadsdencompany.com/">
                 <img
                   src="static/Gadsden-Logo-Footer.svg"
                   class="image wp-image-44  attachment-full size-full" alt=""
                   style="max-width: 100%; height: auto;" />
-              </a>
             </div>
           </section>
         </div>
@@ -187,7 +185,7 @@
     </div>
     <footer class="site-footer" itemscope itemtype="https://schema.org/WPFooter">
       <div class="wrap">
-        <p> Copyright &#x000A9;&nbsp;2022 Haversack Productions.</p>
+        <p> Copyright &#x000A9; Haversack Productions.</p>
       </div>
     </footer>
   </div>
