--- a/index.html
+++ b/index.html
@@ -57,6 +57,16 @@
   <meta name="msapplication-TileColor" content="#c8b879">
   <meta name="msapplication-config" content="static/favicons/browserconfig.xml">
   <meta name="theme-color" content="#ffffff">
+  
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-JXP1R9BKHV"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-JXP1R9BKHV');
+</script>
 
 </head>
 
