Update index.html for kira changes

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
   </header>
 
   <p>
-    Haversack is an event production company located in Tucson, Arizona, specializing in events in the Mercado District of the Menlo Neighborhood, such as:
+    Haversack is an event production company located in Tucson, Arizona, specializing in events in the Mercado District of Menlo Park, such as:
   </p>
 
   <ul>
@@ -115,7 +115,9 @@
   </figure>
 
   <footer>
-    <p>Instagram: <a href="https://instagram.com/mercadodistricttucson" target="_blank">@mercadodistricttucson</a></p>
+    <p>Instagram: 
+      <br/><a href="https://instagram.com/mercadodistricttucson" target="_blank">@mercadodistricttucson</a>
+      <br/><a href="https://instagram.com/mercadodistrictevents" target="_blank">@mercadodistrictevents</a></p>
     <p>Phone: <a href="tel:+15204611106">520-461-1106</a></p>
     <p>For all other Mercado District information: <a href="https://mercadodistrict.com" target="_blank">mercadodistrict.com</a></p>
   </footer>
